# cmu-course-sorter

./: Cargo.toml  README.md  cmu-course-sorter.py  coures_website_response.html  courses_website_response.html  out.txt  spring24-res.txt
src/: main.rs
