[package]
name = "cmu-course-sorter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html5ever = "0.26.0"
html_parser = "0.7.0"
reqwest = { version = "0.11.20", features = ["blocking"] } 
scraper = "0.17.1"
